# DCE12MIPS

./: .gitignore  README.md
alu/: ADD.v  ALU.v  AND.v  EQ.v  GEZ.v  GTZ.v  LEZ.v  LT.v  LUI.v  Makefile  NEQ.v  NOR.v  OR.v  README.md  SLL.v  SRA.v  SRL.v  STA.v  SUB.v  XOR.v  isa_define.v  tb_ALU.v
asmblr/: CMakeLists.txt  README.md
asmblr/asm/: README.md  gcd.asm  test.asm  test1.asm  test2.asm  test3.asm  test_for_branch.asm  test_for_branch.txt
asmblr/script/: gcd_global.v  gcd_text.v  global_from_hex.py  rom_from_hex.py  test3_global.v  test3_text.v  test_digi_global.v  test_digi_text.v
development/: dev-dependency.dia
multicycle/: Makefile  README.md  _multicyc_old.v  _multicyc_process.v  multicyc.v  multicyc_core.v  multicyc_fpga.v  tb1.v
peripheral/: DataMem.v  DataMemInit.v  InstRom.v  Peripheral.v  _SelectTest.v  regfile.v  rom.v
sample/: DataMem.v  Peripheral.v  pipeline.asm  rom.v
single-cycle/: Makefile  README.md  singcyc.v  singcyc_core.v  singcyc_fpga.v  tb1.v
